# fit-fred

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compile_commands.json  run-container.sh  run-ctest-container.sh
.github/workflows/: build.yml
CC7-image/: CentOS-Base.repo  Dockerfile
boards/pm/: pm.conf
boards/tcm/: tcm.conf
config/: fred.conf
configuration-parser/: .gitignore  Cargo.toml  names.txt  pm.csv  tcm.csv
configuration-parser/src/: boards.rs  configuration.rs  main.rs
configuration-parser/src/boards/: parameter_info.rs  register.rs
configuration-parser/src/configuration/: sql.rs
docker/local-dcs/: stop-local-dcs.sh
docker/local-dcs/AlfIPbus/: Dockerfile
docker/local-dcs/FRED/: Dockerfile  build.sh
docker/local-dcs/FRED/config/: fred.conf
docker/local-dcs/Mock/: build.sh
docker/local-dcs/common-storage/registers/: tcm.csv
docs/: Database.md  ReadWriteWinCC.md
docs/others/: Database.md
docs/services/: BOARD_STATUS.md  CONFIGURATIONS.md  COUNTER_RATES.md  PARAMETERS.md  RESET.md  RESET_ERRORS.md  RESET_SYSTEM.md
local-dcs/: run-local-dcs.sh
local-dcs/AlfIPbus/: build.sh
local-dcs/FRED/: Dockerfile
local-dcs/common-storage/: mock-config.toml
local-dcs/common-storage/registers/: fee_a0123456789_c0123456789.csv  generate_fee.py  pm.csv
mapi/include/: AlfResponseParser.h  BasicRequestHandler.h  Board.h  BoardCommunicationHandler.h  BoardRefresh.h  BoardStatus.h  Configurations.h  DatabaseUtils.h  DelayChange.h  Environment.h  EnvironmentVariables.h  Equation.h  FitData.h  GBT.h  InitializationGBT.h  PM.h  PMStatus.h  Parameter.h  ParameterInfo.h  Parameters.h  ResetFEE.h  Settings.h  SwtOperation.h  SwtSequence.h  TCM.h  TCMStatus.h  Utils.h  WinCCMessage.h  WinCCRequest.h  WinCCResponse.h  gbt.h  gbtInterfaceUtils.h  mapifactory.h  utils.h
mapi/include/Database/: DatabaseTables.h  sql.h
mapi/include/board/: Board.h  BoardCommunicationHandler.h  EnvironmentVariables.h  FitData.h  PM.h  TCM.h
mapi/include/communication-utils/: AlfResponseParser.h  SwtSequence.h  WinCCRequest.h  WinCCResponse.h
mapi/include/database/: BoardConfigurationQueries.h  Columns.h  ConfigurationsQueries.h  DatabaseTables.h  DatabaseUtils.h  DatabaseViews.h  FitDataQueries.h  Query.h  sql.h
mapi/include/services/: BasicFitIndefiniteMapi.h  BlockReadTest.h  BoardConfigurations.h  BoardStatus.h  ConfigurationDatabaseBroker.h  Configurations.h  CounterRates.h  FredManager.h  LoopingFitIndefiniteMapi.h  Parameters.h  Reset.h  ResetErrors.h  ResetFEE.h  SaveConfiguration.h  SetPhaseDelay.h
mapi/include/services/calibration/: Calibration.h  Calibrator.h  utils.h
mapi/include/services/configurations/: BoardConfigurations.h  ConfigurationDatabaseBroker.h  Configurations.h  PmConfigurations.h  TcmConfigurations.h
mapi/include/services/histograms/: BinBlock.h  BinIterator.h  BoardHistograms.h  PmHistogramController.h  PmHistogramData.h  PmHistograms.h  TcmHistograms.h
mapi/include/services/templates/: BasicFitIndefiniteMapi.h  LoopingFitIndefiniteMapi.h
mapi/include/utils/: DelayChange.h  Equation.h  gbtInterfaceUtils.h  utils.h
mapi/src/: AlfResponseParser.cpp  BasicRequestHandler.cpp  Board.cpp  BoardCommunicationHandler.cpp  BoardRefresh.cpp  BoardStatus.cpp  Configurations.cpp  DatabaseUtils.cpp  DelayChange.cpp  Environment.cpp  EnvironmentVariables.cpp  Equation.cpp  FitData.cpp  GBT.cpp  InitializationGBT.cpp  PMStatus.cpp  Parameter.cpp  ParameterInfo.cpp  Parameters.cpp  ResetFEE.cpp  Settings.cpp  SwtOperation.cpp  SwtSequence.cpp  TCMStatus.cpp  WinCCMessage.cpp  WinCCRequest.cpp  gbt.cpp  gbtInterfaceUtils.cpp  mapifactory.cpp
mapi/src/Database/: DatabaseTables.cpp
mapi/src/board/: Board.cpp  BoardCommunicationHandler.cpp  EnvironmentVariables.cpp  FitData.cpp
mapi/src/communication-utils/: AlfResponseParser.cpp  SwtSequence.cpp  WinCCRequest.cpp
mapi/src/database/: BoardConfigurationQueries.cpp  Columns.cpp  ConfigurationsQueries.cpp  DatabaseTables.cpp  DatabaseViews.cpp  DatanbaseUtils.cpp  FitDataQueries.cpp
mapi/src/services/: BasicFitIndefiniteMapi.cpp  BoardConfigurations.cpp  BoardStatus.cpp  ConfigurationDatabaseBroker.cpp  Configurations.cpp  CounterRates.cpp  FredManager.cpp  LoopingFitIndefiniteMapi.cpp  Parameters.cpp  Reset.cpp  ResetErrors.cpp  ResetFEE.cpp  SaveConfiguration.cpp  SetPhaseDelay.cpp
mapi/src/services/calibration/: Calibration.cpp  utils.cpp
mapi/src/services/configurations/: BoardConfigurations.cpp  ConfigurationDatabaseBroker.cpp  Configurations.cpp  PmConfigurations.cpp  TcmConfigurations.cpp
mapi/src/services/histograms/: BoardHistograms.cpp  PmHistogramController.cpp  PmHistogramData.cpp  PmHistograms.cpp  TcmHistograms.cpp
mapi/src/services/templates/: BasicFitIndefiniteMapi.cpp  LoopingFitIndefiniteMapi.cpp
mapi/src/utils/: DelayChange.cpp  Equation.cpp  gbtInterfaceUtils.cpp
sections/: pm.section  tcm.section
test/: Dockerfile  ENV.Dockerfile  local-ctest.sh  run-ctest-container.sh
test/AlfResponseParser/: ParsingTest.cpp
test/BasicRequestHandler/: BasicRequestHandlerTest.cpp
test/Board/: BoardTest.cpp
test/Configurations/: ConfigurationsTest.cpp
test/CounterRates/: CounterRatesTest.cpp
test/GbtErrorReport/: GbtErrors.cpp
test/Parameter/: ParameterInterpretationTest.cpp
test/ParameterInfo/: ParameterInterpretationTest.cpp
test/Parameters/: ParametersRefactoredTest.cpp  ParametersTest.cpp
test/SwtSequence/: SwtSequenceTest.cpp
test/Utils/: UtilsTest.cpp
test/WinCCMessage/: WinCCMessageTest.cpp
test/local-dcs/AlfIPbus/: build-alf.sh
test/mocks/include/: databaseinterface.h  mapi.h  utility.h
test/mocks/src/: databaseinterface.cpp  mapi.cpp  utility.cpp
tools/configuration-parser/: Cargo.toml
tools/configuration-parser/src/: configuration.rs  error.rs
unit-tests/AlfResponseParser/: ParsingTest.cpp
